# MeshSimplification

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
example/app/: scene.cpp  scene.h  window.cpp  window.h
example/geometry/: face.cpp  half_edge_mesh.h  mesh_simplifier.h  vertex.h
example/graphics/: arcball.cpp  arcball.h  material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  texture2d.h
src/: CMakeLists.txt  main.cpp
src/app/: camera.cpp  camera.h  scene.cpp  scene.h  window.cpp  window.h
src/geometry/: face.h  half_edge.h  half_edge_mesh.cpp  mesh_simplifier.cpp
src/graphics/: material.h  mesh.cpp  mesh.h  obj_loader.cpp  obj_loader.h  shader_program.cpp  shader_program.h  texture2d.cpp
